--- a/1.md
+++ b/1.md
@@ -1,4 +1,5 @@
-Tip：这是<http://davidshariff.com/quiz/>给出的web前端开发测试题,的CSS部分,我根据自己的理解给出的答案，欢迎拍砖，一起刷题。
+
+# [Front End Web Development Quiz中的css](http://davidshariff.com/quiz/)CSS部分问题与解答
 
 1. Q: CSS 属性是否区分大小写？
 
