--- a/2.md
+++ b/2.md
@@ -41,9 +41,11 @@
 
     A: 不影响。
 
-    > According to Matt Cutts (lead of Google's webspam team and the de facto expert on these things), using multiple <h1> tags is fine, as long as you're not abusing it (like sticking your whole page in an <h1> and using CSS to style it back to normal size). That would likely have no effect, and might trigger a penalty, as it looks spammy.
+    > According to Matt Cutts (lead of Google's webspam team and the de facto expert on these things), using multiple `<h1>`` tags is fine, as long as you're not abusing it (like sticking your whole page in an `<h1>` and using CSS to style it back to normal size). That would likely have no effect, and might trigger a penalty, as it looks spammy.
 
-    > If you have multiple headings and it would be natural to use multiple <h1>'s, then go for it.
+    > If you have multiple headings and it would be natural to use multiple `<h1>`'s, then go for it.
+
+    摘自：<http://www.quora.com/Does-using-multiple-h1-tags-on-a-page-affect-search-engine-rankings>
 
     摘自：<http://www.quora.com/Does-using-multiple-h1-tags-on-a-page-affect-search-engine-rankings>
 
