--- a/2.md
+++ b/2.md
@@ -41,7 +41,7 @@
 
     A: 不影响。
 
-    > According to Matt Cutts (lead of Google's webspam team and the de facto expert on these things), using multiple `<h1>`` tags is fine, as long as you're not abusing it (like sticking your whole page in an `<h1>` and using CSS to style it back to normal size). That would likely have no effect, and might trigger a penalty, as it looks spammy.
+    > According to Matt Cutts (lead of Google's webspam team and the de facto expert on these things), using multiple `<h1>` tags is fine, as long as you're not abusing it (like sticking your whole page in an `<h1>` and using CSS to style it back to normal size). That would likely have no effect, and might trigger a penalty, as it looks spammy.
 
     > If you have multiple headings and it would be natural to use multiple `<h1>`'s, then go for it.
 
@@ -88,7 +88,7 @@
     ```
     A: 支持。
 
-    HTML5中<a>元素表现为一个超链接，支持任何行内元素和块级元素。
+    HTML5中`<a>` 元素表现为一个超链接，支持任何行内元素和块级元素。
 
 9. Q: 当下列的HTML代码加载时会触发新的HTTP请求吗？
 
