--- a/2.md
+++ b/2.md
@@ -4,7 +4,7 @@
 
     A: 是。
 
-    <keygen> 标签规定用于表单的密钥对生成器字段。当提交表单时，私钥存储在本地，公钥发送到服务器。是HTML5 标签。
+    `<keygen>` 标签规定用于表单的密钥对生成器字段。当提交表单时，私钥存储在本地，公钥发送到服务器。是HTML5 标签。
 
 2. Q: `<bdo>` 标签是否可以改变文本方向？
 
