--- a/4.md
+++ b/4.md
@@ -1,6 +1,6 @@
 ## [前端工作面试常见问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#general)
 
-**备注: [Rebecca Murphey](http://rmurphey.com/) 的 [Baseline For Front-End Developers](http://rmurphey.com/blog/2012/04/12/a-baseline-for-front-end-developers/) 是你在准备面试前应该阅读的绝佳资源。
+**备注**: [Rebecca Murphey](http://rmurphey.com/) 的 [Baseline For Front-End Developers](http://rmurphey.com/blog/2012/04/12/a-baseline-for-front-end-developers/) 是你在准备面试前应该阅读的绝佳资源。
 
 **记住：** 很多问题都是开放的，可以引发有趣的讨论。这比直接的答案更能体现此人的能力。
 
@@ -34,17 +34,14 @@
     - [【高性能前端3】高性能JavaScript](http://www.alloyteam.com/2012/10/high-performance-front-end-high-performance-javascript/)
     - [【高性能前端4】Appcache Facts 中译版](http://www.alloyteam.com/2012/10/appcache-facts/)
 
-  SEO:
+  SEO：
     - [SEO在网页制作中的应用](http://www.imooc.com/learn/204)
-<!--     - 我了解的有title,description,keywords,标题，robots.txt,
-      `<meta name="robots" content="index,follow">` -->
 
+  <!--我了解的有title,description,keywords,标题，robots.txt,
+      <meta name="robots" content="index,follow">-->
+  <!--   可维护性： html结构，css结构，js结构，符合规范。制定团队统一规范。语义化。命名规范。在写网页时，组织html结构以及css时 考虑可维护性。例如说工作时去iframe，用命名空间。-->
 
-<!--   可维护性： html结构，css结构，js结构，符合规范。制定团队统一规范。语义化。命名规范。在写网页时，组织html结构以及css时 考虑可维护性。例如说工作时去iframe，用命名空间。
- -->
-* A: 谈谈你喜欢的开发环境。(例如操作系统，编辑器，浏览器，工具等等。 )
-
-  -
+* A: 谈谈你喜欢的开发环境。(例如操作系统，编辑器，浏览器，工具等等)
 
 * A: 你最熟悉哪一套版本控制系统？
 
