--- a/4.md
+++ b/4.md
@@ -43,15 +43,47 @@
   <!--   可维护性： html结构，css结构，js结构，符合规范。制定团队统一规范。语义化。命名规范。在写网页时，组织html结构以及css时 考虑可维护性。例如说工作时去iframe，用命名空间。-->
 
 * A: 谈谈你喜欢的开发环境。(例如操作系统，编辑器，浏览器，工具等等)
+  Q:
+  - **我要攒钱买MBRP**;
+  - 操作系统：windows,linux;
+  - 编辑器：Sublime Text,以前用过一段时间Vim,后来转到Sublime Text;
+  - 浏览器：Chrome,Firefox;
+  - 工具：Photoshop,Eclipse,Fiddler 等;
+  - 前端框架：Bootstarp，jQuery等。
 
 * A: 你最熟悉哪一套版本控制系统？
+  Q:
+  - Git
+  - SVN
 
 * A: 你能描述一下当你制作一个网页的工作流程吗？
+  Q：
+  - 拿到设计师的psd,仔细看psd，结合需求文档，看清楚每一层，每一个结构。构思html 结构，以及CSS可共用的部分，交互效果用JS如何实现等,提出自己的疑问和顾虑，和设计师以及产品经理沟通，更好的实现。
+  - 代码实现，遇到具体细节，不确定的，以及觉得不够人性化的地方，和产品经理，设计师再讨论确定。
+  - 进入提测，根据测试工程师的反馈，修复bug。根据测试工程师提出的反馈，根据自己的思考，去和测试沟通。如果不确定的再和产品、设计师、测试一起确定。
+  - 最后外网测试，修复bug。
+<!-- 要特别重视这一题 -->
+
 
 * A: 你能描述一下渐进增强和优雅降级之间的不同吗?
     * 如果提到了特性检测，可以加分。
 
+      - [CSS “渐进增强”在web制作中常见应用举例](http://www.zhangxinxu.com/wordpress/2010/04/css-%E6%B8%90%E8%BF%9B%E5%A2%9E%E5%BC%BA%E5%9C%A8web%E5%88%B6%E4%BD%9C%E4%B8%AD%E5%B8%B8%E8%A7%81%E5%BA%94%E7%94%A8%E4%B8%BE%E4%BE%8B/)
+      - [译)理解“渐进增强(Progressive Enhancement)”](http://ued.taobao.org/blog/2008/10/understanding-progressiveen-hancement-chs-translation/)
+      - [認識優雅降級與漸進增強](http://augus-blog.logdown.com/posts/143403-graceful_degradation_and_progressive_enhancement)
+      - [优雅降级和渐进增强](http://hanazawakana.iteye.com/blog/1711556)
+      - [渐进增强、优雅降级](http://blog.csdn.net/xiongzhengxiang/article/details/7999525)
+      - [理解前端开发中的优雅降级及渐进增强](http://www.biaodianfu.com/graceful-degradation-progressive-enhancement.html)
+      - [http://www.w3cfuns.com/blog-5426413-5396597.html](http://www.w3cfuns.com/blog-5426413-5396597.html)
+      - [渐进增强和优雅降级之间的有什么不同？](http://segmentfault.com/q/1010000000264469)
+
 * A: 请解释一下什么是“语义化的 HTML”。
+  Q:
+  - [如何理解 web 语义化](http://www.zhihu.com/question/20455165)
+  - [关于HTML语义化的一些理解](http://www.cnblogs.com/season-huang/p/3548514.html)
+  - [再谈语义化](http://ued.ctrip.com/blog/?p=2735)
+  - [语义化标签的实战意义](http://ued.sina.com.cn/?p=157)
+  - [关于Web语义化—张振强](http://studio.ewe.com.cn/?p=455)
 
 * A: 你如何对网站的文件和资源进行优化？
     * 期待的解决方案包括：
@@ -86,6 +118,7 @@
 * A: 什么是 FOUC（无样式内容闪烁）？你如何来避免 FOUC？
 
 * A: 请尽可能完整得描述下从输入URL到整个网页加载完毕及显示在屏幕上的整个流程
+
 
 
 
