:four: :heavy_plus_sign:

--- a/4.md
+++ b/4.md
@@ -62,7 +62,8 @@
   - 代码实现，遇到具体细节，不确定的，以及觉得不够人性化的地方，和产品经理，设计师再讨论确定。
   - 进入提测，根据测试工程师的反馈，修复bug。根据测试工程师提出的反馈，根据自己的思考，去和测试沟通。如果不确定的再和产品、设计师、测试一起确定。
   - 最后外网测试，修复bug。
-<!-- 要特别重视这一题 -->
+
+  <!-- 要特别重视这一题 -->
 
 
 * A: 你能描述一下渐进增强和优雅降级之间的不同吗?
@@ -84,6 +85,7 @@
   - [再谈语义化](http://ued.ctrip.com/blog/?p=2735)
   - [语义化标签的实战意义](http://ued.sina.com.cn/?p=157)
   - [关于Web语义化—张振强](http://studio.ewe.com.cn/?p=455)
+  - [语义化标签规范](http://hikejun.com/work/qq/spec/html_reference.html)
 
 * A: 你如何对网站的文件和资源进行优化？
     * 期待的解决方案包括：
