:one: :zzz: :zzz:

--- a/4.md
+++ b/4.md
@@ -44,7 +44,7 @@
 
 * A: 谈谈你喜欢的开发环境。(例如操作系统，编辑器，浏览器，工具等等)
   Q:
-  - **我要攒钱买MBRP**;
+  - **我要攒钱买MBPR**;
   - 操作系统：windows,linux;
   - 编辑器：Sublime Text,以前用过一段时间Vim,后来转到Sublime Text;
   - 浏览器：Chrome,Firefox;
