--- a/1.md
+++ b/1.md
@@ -40,7 +40,7 @@
 
     A: 不会。
 
-    `rem`是以'html'根元素中`font-size`的大小为基准的相对度量单位，文本的大小不会随着窗口的大小改变而改变。
+    `rem`是以`html`根元素中`font-size`的大小为基准的相对度量单位，文本的大小不会随着窗口的大小改变而改变。
 
 5. Q: 伪类选择器`:checked`将作用与`input`类型为`radio`或者`checkbox`,不会作用于`option`。
 
@@ -54,11 +54,13 @@
 
     A: 不是（答案中给出了是 ==||）。以下摘自知乎[:root 与 html 在 CSS3 中指的是同一个元素吗？](http://www.zhihu.com/question/20312140)的答案：
 
-    单指创建的根。这个根可能不是 html ，如果是片段html，没有创建根，则为片段的根。把这下面 URL 打到支持 data URL 的瀏覽器看看（Firefox, Chrome, Safari, Opera），可见一斑：
+    > 单指创建的根。这个根可能不是 html ，如果是片段html，没有创建根，则为片段的根。把这下面 URL 打到支持 data URL 的瀏覽器看看（Firefox, Chrome, Safari, Opera），可见一斑：
+
     ```
     data:application/xhtml+xml,<div xmlns="http://www.w3.org/1999/xhtml"><style>:root { background: green; } html { background: red !important; }</style></div>
     ```
-7. Q:'translate()'方法能移动一个元素在z轴上的位置？
+
+7. Q:`translate()`方法能移动一个元素在z轴上的位置？
 
     A: 不能。`translate()`方法只能改变x轴，y轴上的位移。
 
@@ -254,7 +256,7 @@
     ```
     A：停止旧版本浏览器解析选择器的其余部分。
 
-    only用来定某种特定的媒体类型，可以用来排除不支持媒体查询的浏览器。其实only很多时候是用来对那些不支持Media Query但却支持Media Type的设备隐藏样式表的。其主要有：支持媒体特性（Media Queries）的设备，正常调用样式，此时就当only不存在；对于不支持媒体特性(Media Queries)但又支持媒体类型(Media Type)的设备，这样就会不读了样式，因为其先读only而不是screen；另外不支持Media Qqueries的浏览器，不论是否支持only，样式都不会被采用。
+    only 用来定某种特定的媒体类型，可以用来排除不支持媒体查询的浏览器。其实only很多时候是用来对那些不支持Media Query 但却支持Media Type 的设备隐藏样式表的。其主要有：支持媒体特性（Media Queries）的设备，正常调用样式，此时就当only 不存在；对于不支持媒体特性(Media Queries)但又支持媒体类型(Media Type)的设备，这样就会不读了样式，因为其先读only 而不是screen；另外不支持Media Qqueries 的浏览器，不论是否支持only，样式都不会被采用。
 
 21. Q:`overfloa:hidden` 是否形成新的块级格式化上下文？
 
@@ -274,8 +276,8 @@
 
     - float的值不为none。
     - overflow的值不为visible。
-    - display的值为table-cell, table-caption, inline-block中的任何一个。
-    - position的值不为relative和static。
+    - display的值为table-cell, table-caption, inline-block 中的任何一个。
+    - position的值不为relative 和static。
 
 22. Q: 'screen'关键词是指设备物理屏幕的大小还是指浏览器的视窗？
 
