:one: :zzz: :zzz:

--- a/1.md
+++ b/1.md
@@ -279,9 +279,15 @@
     - display的值为table-cell, table-caption, inline-block 中的任何一个。
     - position的值不为relative 和static。
 
-22. Q: 'screen'关键词是指设备物理屏幕的大小还是指浏览器的视窗？
+22. Q: `screen`关键词是指设备物理屏幕的大小还是指浏览器的视窗？
 
     ```
     @media only screen and (max-width: 1024px) {margin: 0;}
     ```
     A: 浏览器视窗
+
+
+    <!-- todo BFC知识解析; -->
+    <!-- CSS选择器权重; -->
+    <!-- display:none 和 visibility：hidden 的区别; -->
+    <!-- 图片在家顺序，网页如何加载？ -->
