:one: :heavy_plus_sign:

--- a/1.md
+++ b/1.md
@@ -287,7 +287,31 @@
     A: 浏览器视窗
 
 
-    <!-- todo BFC知识解析; -->
-    <!-- CSS选择器权重; -->
-    <!-- display:none 和 visibility：hidden 的区别; -->
-    <!-- 图片在家顺序，网页如何加载？ -->
+Tips:
+    -  关于CSS选择器以及优先级的知识可查阅如下文章：
+        + [CSS 选择器参考手册](http://www.w3school.com.cn/cssref/css_selectors.asp)
+        + [CSS选择器笔记](http://www.ruanyifeng.com/blog/2009/03/css_selectors.html)
+        + [高级CSS样式选择器](http://blog.fity.cn/post/421/)
+        + [征服高级CSS选择器](http://www.qianduan.net/taming-advanced-css-selectors.html)
+        + [详解CSS选择器、优先级与匹配原理](http://developer.51cto.com/art/201009/226852.htm)
+        + [优先级](https://developer.mozilla.org/zh-CN/docs/Web/CSS/Specificity)
+        + [牢记 31 种 CSS 选择器用法](http://peiwen.lu/css-selectors-must-memorize/#post__title)
+        + 如何计算优先级：
+            > 那么你如何计算指定选择器的优先级？如果你考虑到将优先级表示为用逗号隔开的四个数字就会相当简单，比如：1, 1, 1, 1 或0, 2, 0, 1
+                - 第一个数字(a)通常就是0，除非在标签上使用style属性；
+                - 第二个数字(b)是该选择器上的id的数量的总和；
+                - 第三个数字(c)是用在该选择器上的其它属性选择器和伪类的总和。这里包括class (.example) 和属性选择器(比如 `li[id=red]`)；
+                - 第四个数字(d)计算元素(就像table、p、div等等)和伪元素(就像:first-line等)；
+                - 通用选择器(*)是0优先级；
+                - 如果两个选择器有同样的优先级，在样式表中后面的那个起作用。
+        + 浏览器CSS匹配不是从左到右进行查找，而是从右到左进行查找。比如`#divBox p span.red{color:red;}`，浏览器的查找顺序如下：先查找html中所有class='red'的span元素，找到后，再查找其父辈元素中是否有p元素，再判断p的父元素中是否有id为divBox的div元素，如果都存在则匹配上。
+
+浏览器从右到左进行查找的好处是为了尽早过滤掉一些无关的样式规则和元素。
+
+
+    <!-- 1.CSS选择器权重; -->
+    <!-- 2.display:none 和 visibility：hidden 的区别; -->
+    <!-- 3. 图片加载顺序，网页如何加载？ -->
+    <!-- 4. BFC知识解析以及haslayout
+    ; -->
+    <!-- todo padding,margin CSS权威指南章节 -->
