:one: :heavy_plus_sign:

--- a/1.md
+++ b/1.md
@@ -312,8 +312,32 @@ Tips:
 
     浏览器CSS匹配不是从左到右进行查找，而是从右到左进行查找。比如`#divBox p span.red{color:red;}`，浏览器的查找顺序如下：先查找html中所有class='red'的span元素，找到后，再查找其父辈元素中是否有p元素，再判断p的父元素中是否有id为divBox的div元素，如果都存在则匹配上。浏览器从右到左进行查找的好处是为了尽早过滤掉一些无关的样式规则和元素。
 
-            <!-- 1.CSS选择器权重; -->
-            <!-- 2.display:none 和 visibility：hidden 的区别; -->
+  - `display:none` 和`visibilty:hidden`的区别：
+    
+    可参考：
+      + [What is the difference between visibility:hidden and display:none?](http://stackoverflow.com/questions/133051/what-is-the-difference-between-visibilityhidden-and-displaynone)
+      + [display:none和visibility:hidden的区别！](http://bbs.blueidea.com/thread-2942695-1-1.html)
+
+    > `display:none`和`visibility:hidden`都是把网页上某个元素隐藏起来的功能，但两者有所区别，经过亲自实验，我发现使用`` visibility:hidden`属性会使对象不可见，但该对象在网页所占的空间没有改变（看不见但摸得到），等于留出了一块空白区域，而 `display:none`属性会使这个对象彻底消失（看不见也摸不到）
+
+    > `display:none` means that the the tag in question will not appear on the page at all (although you can still interact with it through the dom). There will be no space allocated for it between the other tags. visibility:hidden means that unlike display:none, the tag is not visible, but space is allocated for it on the page. so for example:
+
+     ```
+     <span>test</span> | <span>Appropriate style in this tag</span> | <span>test</span>
+     ```
+
+     `display:none` would be:
+
+      test |   | test
+
+     `visibility:hidden` would be:
+
+     test |                        | test
+
+     In visibility:hidden the tag is rendered, it just isn't seen on the page.
+
+
+        <!-- 2.display:none 和 visibility：hidden 的区别; -->
             <!-- 3. 图片加载顺序，网页如何加载？ -->
             <!-- 4. BFC知识解析以及haslayout
             ; -->
