:one: :heavy_plus_sign:

--- a/1.md
+++ b/1.md
@@ -326,15 +326,15 @@ Tips:
      <span>test</span> | <span>Appropriate style in this tag</span> | <span>test</span>
      ```
 
-     `display:none` would be:
+    > `display:none` would be:
 
-      test |   | test
+    > test |   | test
 
-     `visibility:hidden` would be:
+    > `visibility:hidden` would be:
 
-     test |                        | test
+    > test |                        | test
 
-     In visibility:hidden the tag is rendered, it just isn't seen on the page.
+    > In visibility:hidden the tag is rendered, it just isn't seen on the page.
 
 
         <!-- 2.display:none 和 visibility：hidden 的区别; -->
