--- a/1.md
+++ b/1.md
@@ -328,11 +328,11 @@ Tips:
 
     > `display:none` would be:
 
-    > test |   | test
+    test |   | test
 
     > `visibility:hidden` would be:
 
-    > test |                        | test
+    test |                        | test
 
     > In visibility:hidden the tag is rendered, it just isn't seen on the page.
 
