--- a/1.md
+++ b/1.md
@@ -313,7 +313,7 @@ Tips:
     浏览器CSS匹配不是从左到右进行查找，而是从右到左进行查找。比如`#divBox p span.red{color:red;}`，浏览器的查找顺序如下：先查找html中所有class='red'的span元素，找到后，再查找其父辈元素中是否有p元素，再判断p的父元素中是否有id为divBox的div元素，如果都存在则匹配上。浏览器从右到左进行查找的好处是为了尽早过滤掉一些无关的样式规则和元素。
 
   - `display:none` 和`visibilty:hidden`的区别：
-    
+
     可参考：
       + [What is the difference between visibility:hidden and display:none?](http://stackoverflow.com/questions/133051/what-is-the-difference-between-visibilityhidden-and-displaynone)
       + [display:none和visibility:hidden的区别！](http://bbs.blueidea.com/thread-2942695-1-1.html)
@@ -336,8 +336,10 @@ Tips:
 
     > In visibility:hidden the tag is rendered, it just isn't seen on the page.
 
-
-        <!-- 2.display:none 和 visibility：hidden 的区别; -->
+  - 浏览器如何渲染，可以查阅如下文章：
+    + [浏览器的渲染原理简介](http://coolshell.cn/articles/9666.html)
+    + [专题：浏览器:渲染重绘、重排两三事](http://developer.51cto.com/art/201311/418133.htm)
+    + []()
             <!-- 3. 图片加载顺序，网页如何加载？ -->
             <!-- 4. BFC知识解析以及haslayout
             ; -->
