--- a/1.md
+++ b/1.md
@@ -287,7 +287,7 @@
     A: 浏览器视窗
 
 
-Tips:
+Tips: 根据以上考点总结下如下知识点，后期会写文章进行总结，这里只挑出重点进行解析。
 
   -  关于CSS选择器以及优先级的知识可查阅如下文章：
       + [CSS 选择器参考手册](http://www.w3school.com.cn/cssref/css_selectors.asp)
@@ -339,8 +339,12 @@ Tips:
   - 浏览器如何渲染，可以查阅如下文章：
     + [浏览器的渲染原理简介](http://coolshell.cn/articles/9666.html)
     + [专题：浏览器:渲染重绘、重排两三事](http://developer.51cto.com/art/201311/418133.htm)
-    + []()
-            <!-- 3. 图片加载顺序，网页如何加载？ -->
-            <!-- 4. BFC知识解析以及haslayout
-            ; -->
-            <!-- todo padding,margin CSS权威指南章节 -->
+    + [浏览器加载和渲染HTML的顺序以及Gzip的问题](http://www.nowamagic.net/academy/detail/48110160)
+
+  - BFC( block formatting contexts ) 块级格式上下文
+    + [深入理解BFC和Margin Collapse](http://www.w3cplus.com/css/understanding-bfc-and-margin-collapse.html)
+    + [CSS布局中一个简单的应用BFC的例子](http://www.aliued.cn/2012/12/31/css%E5%B8%83%E5%B1%80%E4%B8%AD%E4%B8%80%E4%B8%AA%E7%AE%80%E5%8D%95%E7%9A%84%E5%BA%94%E7%94%A8bfc%E7%9A%84%E4%BE%8B%E5%AD%90.html)
+    + [理解BFC(Block Formatting Context)](http://jqc.me/?p=68)
+
+
+  - margin，padding相关的知识可以参靠查阅《CSS权威指南》
