:round_pushpin: :round_pushpin: :round_pushpin:

--- a/2.md
+++ b/2.md
@@ -144,3 +144,13 @@
     ```
 
     A: yes!
+
+## 知识点总结：
+  - 浏览器如何渲染，可以查阅如下文章：
+    + [浏览器的渲染原理简介](http://coolshell.cn/articles/9666.html)
+    + [专题：浏览器:渲染重绘、重排两三事](http://developer.51cto.com/art/201311/418133.htm)
+    + [浏览器加载和渲染HTML的顺序以及Gzip的问题](http://www.nowamagic.net/academy/detail/48110160)
+    + [从FE的角度上再看输入url后都发生了什么](http://div.io/topic/609)
+
+  - HTML5 方便的资料可阅读：
+    + [你需要知道的五个HTML5新功能](http://www.html5cn.org/article-6180-1.html)
