6.md给出部分答案

--- a/前端试题/6.md
+++ b/前端试题/6.md
@@ -1,25 +1,115 @@
-####[[⬆]](#toc) <a name='css'>CSS 相关问题：</a>
+####前端面试CSS 相关问题
 
-* 描述下 “reset” CSS 文件的作用和使用它的好处。
+* Q：描述下 “reset” CSS 文件的作用和使用它的好处。
+  A：
+    - 作用以及好处：因为各个浏览器默认对CSS的渲染有差异，"reset" CSS 通过重新定义标签样式，对浏览器进行默认样式“清零”重置，样式保持一致。
+    - 不足:
+      + css文件大小增加；
+      + 许多样式本身就需要重置，多此一举；
+      + 增加浏览器对CSS 的渲染。
 
-* 解释下浮动和它的工作原理。
+    可以阅读以下文章增强了解：
+    - [CSS reset的重新审视 – 避免样式重置](http://www.zhangxinxu.com/wordpress/2010/04/css-reset%E7%9A%84%E9%87%8D%E6%96%B0%E5%AE%A1%E8%A7%86-%E9%81%BF%E5%85%8D%E6%A0%B7%E5%BC%8F%E9%87%8D%E7%BD%AE/)
+    - [常见标签的默认属性值及相互作用——关于CSS reset的思考](http://www.cnblogs.com/dolphinx/p/3509515.html)
+    - [reset.css](http://baike.baidu.com/view/5186496.htm)
+    - [前端面试问题](http://handyxuefeng.blog.163.com/blog/static/454521722013111714040259/)
+
+* Q: 解释下浮动和它的工作原理。
+  A: 浮动出现的最开始出现的意义是用来让文字环绕图片而已。`float`可以自动包裹元素。`float`会导致高度塌陷。`float`为什么会导致高度塌陷：元素含有浮动属性 –> 破坏`inline box` –> 破坏`line box`高度 –> 没有高度 –> 塌陷。什么时候会塌陷：当标签里面的元素只要样子没有实际高度时会塌陷。浮动会脱离文档流。产生自己的块级格式化上下文。
+
+    可以阅读以下文章增加理解：
+    - [CSS float浮动的深入研究、详解及拓展(一)](http://www.zhangxinxu.com/wordpress/2010/01/css-float%E6%B5%AE%E5%8A%A8%E7%9A%84%E6%B7%B1%E5%85%A5%E7%A0%94%E7%A9%B6%E3%80%81%E8%AF%A6%E8%A7%A3%E5%8F%8A%E6%8B%93%E5%B1%95%E4%B8%80/)
+    - [CSS float浮动的深入研究、详解及拓展(二)](http://www.zhangxinxu.com/wordpress/2010/01/css-float%E6%B5%AE%E5%8A%A8%E7%9A%84%E6%B7%B1%E5%85%A5%E7%A0%94%E7%A9%B6%E3%80%81%E8%AF%A6%E8%A7%A3%E5%8F%8A%E6%8B%93%E5%B1%95%E4%BA%8C/)
+    - [那些年我们一起清除过的浮动](http://www.iyunlu.com/view/css-xhtml/55.html)
+    -《CSS权威指南》
 
 * 列举不同的清除浮动的技巧，并指出它们各自适用的使用场景。
+  + 直接把```<div style="clear:both;"></div>```放到当作最后一个子标签放到父标签那儿，此方法兼容性强，使用方便，但是浪费了一个标签，而且只能使用一次，而且有时候如果不注意中间多了个空格会产生一段空白高度。
+    - 优点：通俗易懂，容易掌握；
+    - 缺点：可以想象通过此方法，会添加多少无意义的空标签，有违结构与表现的分离，在后期维护中将是噩梦。
+  +
+    ```
+    .clearfix{overflow:hidden; zoom:1;}
+    ```
+    此方法优点在于代码简洁，涵盖所有浏览器，可是对于`overflow:hidden;`要是里面的元素要是想来个`margin`负值定位或是负的绝对定位，岂不是直接被裁掉了，所以此方法是有不小的局限性的。
+    - 优点：不存在结构和语义化问题，代码量极少；
+    - 缺点：内容增多时候容易造成不会自动换行导致内容被隐藏掉，无法显示需要溢出的元素。
+  +
+    ```
+    .fix{zoom:1;}
+    .fix:after{
+        display:block;
+        content:'.';
+        clear:both;
+        line-height:0;
+        visibility:hidden;}
+    ```
+    `line-height:0`写成`height:0`也是可以的。不会影响任何其他样式，通用性强，覆盖面广，我很推荐哦。
+  + 父元素也浮动：
+    - 优点：不存在结构和语义化问题，代码量极少
+    - 缺点：使得与父元素相邻的元素的布局会受到影响，不可能一直浮动到body，不推荐使用
 
-* 解释下 CSS sprites，以及你要如何在页面或网站中使用它。
+  总结：
+    + 其一，通过在浮动元素的末尾添加一个空元素，设置 `clear：both`属性，`after`伪元素其实也是通过 `content` 在元素的后面生成了内容为一个点的块级元素；
+    + 其二，通过设置父元素 `overflow` 或者`display：table` 属性来闭合浮动，这里的原理涉及到BFC，这里不再赘述。
 
-* 你最喜欢的图片替换方法是什么，你如何选择使用。
+   同样请参考上一题给出的参考文章进行阅读加以理解。
 
-* 讨论CSS hacks，条件引用或者其他。
 
-* 如何为有功能限制的浏览器提供网页？
-  * 你会使用哪些技术和处理方法？
+* Q: 解释下 CSS sprites，以及你要如何在页面或网站中使用它。
+  A: CSS Sprites就是把网页中一些背景图片整合到一张图片文件中，再利用CSS的`background-image`，`background- repeat`，`background-position`的组合进行背景定位，`background-position`可以用数字能精确的定位出背景图片的位置。
 
-* 有哪些的隐藏内容的方法（如果同时还要保证屏幕阅读器可用呢？）
 
-* 你用过栅格系统吗？如果使用过，你最喜欢哪种？
+* Q: 你最喜欢的图片替换方法是什么，你如何选择使用。
+  A: 
+    - 一些图标是使用before和after伪元素;
+    - 还有一些使用iconfont;
+    - 还有这种`<h2> <span 图片丢这里></span>Hello World </h2> `把`span`背景设成文字内容，这样又可以保证seo，也有图片的效果在上面。一般都是：`alt`，`title`，`onerror`
+
+* Q：讨论CSS hacks，条件引用或者其他。
+  A:
+  ```
+  background-color:blue; 各个浏览器都认识，这里给firefox用；
+  background-color:red\9;\9所有的ie浏览器可识别；
+  background-color:yellow\0; \0 是留给ie8的
+  +background-color:pink; + ie7定了；
+  _background-color:orange; _专门留给神奇的ie6；
+  :root #test { background-color:purple\9; } :root是给ie9的，
+  @media all and (min-width:0px){ #test {background-color:black\0;} } 这个是老是跟ie抢着认\0的神奇的opera，必须加个\0,不然firefox，chrome，safari也都认识。。。
+  @media screen and (-webkit-min-device-pixel-ratio:0){ #test {background-color:gray;} }最后这个是浏览器新贵chrome和safari的。
+  ```
+* Q: 如何为有功能限制的浏览器提供网页？
+  * Q: 你会使用哪些技术和处理方法？
+  A: 现代浏览器使用CSS3,HTML5 等实现更好的效果，低端浏览器进行hack以及优雅降级。禁掉script也要有一个很好的内容呈现。
+
+
+* Q： 有哪些的隐藏内容的方法（如果同时还要保证屏幕阅读器可用呢？）
+  A: ? todo
+    - display:none;的缺陷
+       搜索引擎可能认为被隐藏的文字属于垃圾信息而被忽略;屏幕阅读器（是为视觉上有障碍的人设计的读取屏幕内容的程序）会忽略被隐藏的文字。
+    - visibility: hidden ;的缺陷
+        这个大家应该比较熟悉就是隐藏的内容会占据他所应该占据物理空间
+    - overflow:hidden;一个比较合理的方法
+    ```
+      .texthidden {
+        display:block;/*统一转化为块级元素*/
+        overflow: hidden;
+        width: 0;
+        height: 0;
+       }
+    ```
+    就像上面的一段CSS所展示的方法，将宽度和高度设定为0，然后超过部分隐藏，就会弥补上述一、二方法中的缺陷，也达到了隐藏内容的目的。
+
+* Q：你用过栅格系统吗？如果使用过，你最喜欢哪种？
+  A：我使用过bootstarp。易于上手，学习成本低，还能做出比较大方美观的页面。
 
 * 你用过媒体查询，或针对移动端的布局/CSS 吗？
+  A:
+  ```
+    @media screen and (min-width: 400px) and (max-width: 700px) { … }
+    @media handheld and (min-width: 20em), screen and (min-width: 20em) { … }
+  ```
+
 
 * 你熟悉 SVG 样式的书写吗？
 
