--- a/前端试题/6.md
+++ b/前端试题/6.md
@@ -57,14 +57,14 @@
 
   总结：
     + 其一，通过在浮动元素的末尾添加一个空元素，设置 `clear：both`属性，`after`伪元素其实也是通过 `content` 在元素的后面生成了内容为一个点的块级元素；
-    + 其二，通过设置父元素 `overflow` 或者`display：table` 属性来闭合浮动，这里的原理涉及到BFC，这里不再赘述。
+    + 其二，通过设置父元素 `overflow` 或者`display：table` 属性来闭合浮动，这里的原理涉及到BFC，不再赘述。
 
    同样请参考上一题给出的参考文章进行阅读加以理解。
 
 
 * Q: 解释下 CSS sprites，以及你要如何在页面或网站中使用它。
 
-  A: CSS Sprites就是把网页中一些背景图片整合到一张图片文件中，再利用CSS的`background-image`，`background- repeat`，`background-position`的组合进行背景定位，`background-position`可以用数字能精确的定位出背景图片的位置。
+  A: CSS Sprites就是把网页中一些小图片整合到一张图片文件中，再利用CSS的`background-image`，`background- repeat`，`background-position`的组合进行背景定位，`background-position`可以用数字能精确的定位出背景图片的位置。可以减少http请求。
 
 
 * Q: 你最喜欢的图片替换方法是什么，你如何选择使用。
@@ -72,37 +72,88 @@
   A:
     - 一些图标是使用before和after伪元素;
     - 还有一些使用iconfont;
-    - 还有这种`<h2> <span 图片丢这里></span>Hello World </h2> `把`span`背景设成文字内容，这样又可以保证seo，也有图片的效果在上面。一般都是：`alt`，`title`，`onerror`
+    - 使用sprite图;
+    - 用背景图片代替图片
+
+    举个栗子：
+
+    ```
+      <h1 class="nir">[content]</h1>
+    ```
+
+    ```
+    .nir {
+       height: 100px; /* height of replacement image */
+       padding: 0;
+       margin: 0;
+       overflow: hidden;
+    }
+
+    .nir:before {
+         content: url(image.gif);
+         display: block;
+      }
+    ```
+
+    详细可阅读：[CSS image replacement with pseudo-elements](http://nicolasgallagher.com/css-image-replacement-with-pseudo-elements/)
 
 * Q：讨论CSS hacks，条件引用或者其他。
 
-  A:
+  A: CSS主要由三种方法
+    - 属性前缀法(即类内部Hack)：例如 IE6能识别下划线"\_"和星号" \* "，IE7能识别星号" \* "，但不能识别下划线"\_"，IE6~IE10都认识"\9"，但firefox前述三个都不能认识。
+    - 选择器前缀法(即选择器Hack)：例如 IE6能识别`*html .class{}`，IE7能识别`*+html .class{}`或者`*:first-child+html .class{}`。
+    - IE条件注释法(即HTML条件注释Hack)：针对所有IE(注：IE10+已经不再支持条件注释)： <!--[if IE]>IE浏览器显示的内容 <![endif]-->，针对IE6及以下版本： <!--[if lt IE 6]>只在IE6-显示的内容 <![endif]-->。这类Hack不仅对CSS生效，对写在判断语句里面的所有代码都会生效。
 
-  ```
-  background-color:blue; 各个浏览器都认识，这里给firefox用；
-  background-color:red\9;\9所有的ie浏览器可识别；
-  background-color:yellow\0; \0 是留给ie8的
-  +background-color:pink; + ie7定了；
-  _background-color:orange; _专门留给神奇的ie6；
-  :root #test { background-color:purple\9; } :root是给ie9的，
-  @media all and (min-width:0px){ #test {background-color:black\0;} } 这个是老是跟ie抢着认\0的神奇的opera，必须加个\0,不然firefox，chrome，safari也都认识。。。
-  @media screen and (-webkit-min-device-pixel-ratio:0){ #test {background-color:gray;} }最后这个是浏览器新贵chrome和safari的。
-  ```
+    ```
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <title>Css Hack</title>
+        <style>
+        #test
+        {
+            width:300px;
+            height:300px;
+
+            background-color:blue;      /*firefox*/
+            background-color:red\9;      /*all ie*/
+            background-color:yellow\0;    /*ie8*/
+            +background-color:pink;        /*ie7*/
+            _background-color:orange;       /*ie6*/
+        }
+        :root #test { background-color:purple\9; }  /*ie9*/
+        @media all and (min-width:0px){ #test {background-color:black\0;} }  /*opera*/
+        @media screen and (-webkit-min-device-pixel-ratio:0){ #test {background-color:gray;} }  /*chrome and safari*/
+        </style>
+    </head>
+    <body>
+        <div id="test">test</div>
+    </body>
+    </html>
+    ```
+
+  想要更多的了解CSS hack 方面的知识可以参考：
+    - [史上最全的CSS hack方式一览](http://blog.csdn.net/freshlover/article/details/12132801)
+    - [史上最全的css hack](http://www.cnblogs.com/wuqiang/archive/2011/08/23/2150240.html)
 
 * Q: 如何为有功能限制的浏览器提供网页？
   * Q: 你会使用哪些技术和处理方法？
 
-  A: 现代浏览器使用CSS3,HTML5 等实现更好的效果，低端浏览器进行hack以及优雅降级。禁掉script也要有一个很好的内容呈现。
+   A: 功能限制的浏览器，比如 IE 低版本、手机浏览器、奇葩国内浏览器，会在很多功能上不符合 Web 标准，而应对的方式有这么几种：
 
+    - 只提供符合 Web 标准的页面；
+    - 提供另一个符合那些浏览器标准的页面(例如说移动端一套css,电脑端一套css);
+    - 兼容：这里有两种思路，一个是渐进增强，一个优雅降级。
+      渐进增强的思路就是提供一个可用的原型，后来再为高级浏览器提供优化。优雅降级的思路是根据高级浏览器提供一个版本，然后有功能限制的浏览器只需要一个刚好能用的版本。当然，工作中的标准都是尽量满足设计，如果不能满足的话就尽量贴近，不得已（性能之类的问题）才会砍掉某个浏览器版本上的需求。
+
+    相关技术:
+    - Media Query
+    - CSS hack
+    - 条件判断 `<!--[if !IE]><!-->除IE外都可识别 <!--<![endif]-->`
 
 * Q： 有哪些的隐藏内容的方法（如果同时还要保证屏幕阅读器可用呢？）
 
-  A: ? todo
-    - display:none;的缺陷
-       搜索引擎可能认为被隐藏的文字属于垃圾信息而被忽略;屏幕阅读器（是为视觉上有障碍的人设计的读取屏幕内容的程序）会忽略被隐藏的文字。
-    - visibility: hidden ;的缺陷
-        这个大家应该比较熟悉就是隐藏的内容会占据他所应该占据物理空间
-    - overflow:hidden;一个比较合理的方法
+  A: `display:none`看不见也摸不着，屏幕阅读器更会忽略其内容；而'visibility:hidden'虽然看得见但是摸不着，占据了一定的物理空间，屏幕阅读器也会忽略。如果想要在读屏设备中让这些内容可见。解决方案的基本思路都是将这些内容放到屏幕、视线意外的地方，或者就是将大小设置成 0。比如 `text-indent: -9999em;`、`overflow: hidden;`、`height: 0`。
 
     ```
       .texthidden {
@@ -112,28 +163,88 @@
         height: 0;
        }
     ```
+  更详细的方法可以参考这篇文章[HIDING CONTENT FOR ACCESSIBILITY](http://snook.ca/archives/html_and_css/hiding-content-for-accessibility)
 
-    就像上面的一段CSS所展示的方法，将宽度和高度设定为0，然后超过部分隐藏，就会弥补上述一、二方法中的缺陷，也达到了隐藏内容的目的。
+  不过既然这是了读屏而优化的，那么可以用 media query 来完成，media speech 用于语音输出的读屏设备。
+  ```
+  @media speech {
+      /* media-specify rules */
+  }
+  ```
+
+  以上转自[Witcher42](http://witcher42.github.io/2014/06/06/what-are-the-different-ways-to-visually-hide-content-and-make-it-available-only-for-screen-readers/)给出的答案。
 
 * Q：你用过栅格系统吗？如果使用过，你最喜欢哪种？
 
-  A：我使用过bootstarp。易于上手，学习成本低，还能做出比较大方美观的页面。
+  A：使用过bootstarp。易于上手，学习成本低，还能做出比较大方美观的页面。
 
-* 你用过媒体查询，或针对移动端的布局/CSS 吗？
+  可阅读[栅格系统延续美学](http://mux.baidu.com/?p=1550)
+
+* Q: 你用过媒体查询，或针对移动端的布局/CSS 吗？
 
   A:
 
   ```
-    @media screen and (min-width: 400px) and (max-width: 700px) { … }
-    @media handheld and (min-width: 20em), screen and (min-width: 20em) { … }
+    @media screen and (min-width:600px) {
+      nav {
+        float: left;
+        width: 25%;
+      }
+      section {
+        margin-left: 25%;
+      }
+    }
+    @media screen and (max-width:599px) {
+      nav li {
+        display: inline;
+      }
+    }
   ```
 
+    可参考：
+    - [CSS媒体查询](https://developer.mozilla.org/zh-CN/docs/Web/Guide/CSS/Media_queries)
+    - [使用 CSS 媒体查询创建响应式网站](http://www.ibm.com/developerworks/cn/web/wa-cssqueries/)
+* Q:你熟悉 SVG 样式的书写吗？
 
-* 你熟悉 SVG 样式的书写吗？
+  A:
+  ```
+  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+   <circle cx="40" cy="40" r="24" style="stroke:#006600; fill:#00cc00"/>
+   <text x="250" y="150" font-family="Verdana" font-size="10px" fill="blue">Hello, out there</text>
+   <defs><style type="text/css"> <![CDATA[.sample{stroke:blue;fill:#0080FF;opacity:1;}]]></style></defs>
+   <use xlink:href="#sample1" class="sample"/>
+   </svg>
+  ```
 
-* 如何优化网页的打印样式？
+  教程参考: [SVG教程](https://developer.mozilla.org/zh-CN/docs/Web/SVG/Tutorial)
 
-* 在书写高效 CSS 时会有哪些问题需要考虑？
+* Q: 如何优化网页的打印样式？
+
+  A:  `<link rel="stylesheet" type="text/css" media="screen" href="xxx.css" />`
+ 其中media指定的属性就是设备，显示器上就是screen，打印机则是print，电视是tv，投影仪是projection。
+ `<link rel="stylesheet" type="text/css" media="print" href="yyy.css" />`
+ 但打印样式表也应有些注意事项：
+
+ 1 打印样式表中最好不要用背景图片，因为打印机不能打印CSS中的背景。如要显示图片，请使用html插入到页面中。
+ 2 最好不要使用像素作为单位，因为打印样式表要打印出来的会是实物，所以建议使用pt和cm。
+ 3 隐藏掉不必要的内容。（`@print div{display:none;}`）
+ 4 打印样式表中最好少用浮动属性，因为它们会消失。
+ 如果想要知道打印样式表的效果如何，直接在浏览器上选择打印预览就可以了。
+
+* Q: 书写高效 CSS 时会有哪些问题需要考虑？
+
+  A:
+  + 样式是：从右向左的解析一个选择器
+  + ID最快，Universal最慢 有四种类型的key selector，解析速度由快到慢依次是：ID、class、tag和universal
+  + 不要tag-qualify （永远不要这样做 ul#main-navigation { } ID已经是唯一的，不需要Tag来标识，这样做会让选择器变慢。）
+  + 后代选择器最糟糕（换句话说，下面这个选择器是很低效的： html body ul li a { }）
+  + 想清楚你为什么这样写
+  + CSS3的效率问题（CSS3选择器（比如 :nth-child）能够漂亮的定位我们想要的元素，又能保证我们的CSS整洁易读。但是这些神奇的选择器会浪费很多的浏览器资源。）
+  + 我们知道#ID速度是最快的，那么我们都用ID，是不是很快。但是我们不应该为了效率而牺牲可读性和可维护性`
+
+  可参考： <http://blog.jobbole.com/55067/>
+
+  等我重写这道题答案。=。=
 
 * 使用 CSS 预处理器的优缺点有哪些？(SASS，Compass，Stylus，LESS)
   * 描述下你曾经使用过的 CSS 预处理的优缺点。
