--- a/前端试题/6.md
+++ b/前端试题/6.md
@@ -73,7 +73,7 @@
     - 一些图标是使用before和after伪元素;
     - 还有一些使用iconfont;
     - 使用sprite图;
-    - 用背景图片代替图片
+    - 用背景图片代替图片。
 
     举个栗子：
 
@@ -99,7 +99,8 @@
 
 * Q：讨论CSS hacks，条件引用或者其他。
 
-  A: CSS主要由三种方法
+  A: CSS主要由三种方法：
+
     - 属性前缀法(即类内部Hack)：例如 IE6能识别下划线"\_"和星号" \* "，IE7能识别星号" \* "，但不能识别下划线"\_"，IE6~IE10都认识"\9"，但firefox前述三个都不能认识。
     - 选择器前缀法(即选择器Hack)：例如 IE6能识别`*html .class{}`，IE7能识别`*+html .class{}`或者`*:first-child+html .class{}`。
     - IE条件注释法(即HTML条件注释Hack)：针对所有IE(注：IE10+已经不再支持条件注释)： <!--[if IE]>IE浏览器显示的内容 <![endif]-->，针对IE6及以下版本： <!--[if lt IE 6]>只在IE6-显示的内容 <![endif]-->。这类Hack不仅对CSS生效，对写在判断语句里面的所有代码都会生效。
@@ -153,7 +154,7 @@
 
 * Q： 有哪些的隐藏内容的方法（如果同时还要保证屏幕阅读器可用呢？）
 
-  A: `display:none`看不见也摸不着，屏幕阅读器更会忽略其内容；而'visibility:hidden'虽然看得见但是摸不着，占据了一定的物理空间，屏幕阅读器也会忽略。如果想要在读屏设备中让这些内容可见。解决方案的基本思路都是将这些内容放到屏幕、视线意外的地方，或者就是将大小设置成 0。比如 `text-indent: -9999em;`、`overflow: hidden;`、`height: 0`。
+  A: `display:none`看不见也摸不着，屏幕阅读器更会忽略其内容；而`visibility:hidden`虽然看得见但是摸不着，占据了一定的物理空间，屏幕阅读器也会忽略。如果想要在读屏设备中让这些内容可见。解决方案的基本思路都是将这些内容放到屏幕、视线意外的地方，或者就是将大小设置成 0。比如 `text-indent: -9999em;`、`overflow: hidden;`、`height: 0`。
 
     ```
       .texthidden {
@@ -178,7 +179,7 @@
 
   A：使用过bootstarp。易于上手，学习成本低，还能做出比较大方美观的页面。
 
-  可阅读[栅格系统延续美学](http://mux.baidu.com/?p=1550)
+  可阅读[栅格系统延续美学](http://mux.baidu.com/?p=1550)。
 
 * Q: 你用过媒体查询，或针对移动端的布局/CSS 吗？
 
@@ -220,15 +221,20 @@
 
 * Q: 如何优化网页的打印样式？
 
-  A:  `<link rel="stylesheet" type="text/css" media="screen" href="xxx.css" />`
+  A:
+
+  `<link rel="stylesheet" type="text/css" media="screen" href="xxx.css" />`
+
  其中media指定的属性就是设备，显示器上就是screen，打印机则是print，电视是tv，投影仪是projection。
+
  `<link rel="stylesheet" type="text/css" media="print" href="yyy.css" />`
+
  但打印样式表也应有些注意事项：
 
- 1 打印样式表中最好不要用背景图片，因为打印机不能打印CSS中的背景。如要显示图片，请使用html插入到页面中。
- 2 最好不要使用像素作为单位，因为打印样式表要打印出来的会是实物，所以建议使用pt和cm。
- 3 隐藏掉不必要的内容。（`@print div{display:none;}`）
- 4 打印样式表中最好少用浮动属性，因为它们会消失。
+  1 打印样式表中最好不要用背景图片，因为打印机不能打印CSS中的背景。如要显示图片，请使用html插入到页面中。
+  2 最好不要使用像素作为单位，因为打印样式表要打印出来的会是实物，所以建议使用pt和cm。
+  3 隐藏掉不必要的内容。（`@print div{display:none;}`）
+  4 打印样式表中最好少用浮动属性，因为它们会消失。
  如果想要知道打印样式表的效果如何，直接在浏览器上选择打印预览就可以了。
 
 * Q: 书写高效 CSS 时会有哪些问题需要考虑？
