--- a/前端试题/2.md
+++ b/前端试题/2.md
@@ -33,7 +33,7 @@
 
 4. Q: 哪种情况下应该使用`small`标签？当你想在`h1` 标题后创建副标题？还是当在`footer`里面增加版权信息？
 
-    A: `small`标签正确的使用场景是在版权信息和法律文本里使用。
+    A: `small`标签一般使用场景是在版权信息和法律文本里使用，也可以在标题里使用标注附加信息（bootstrap中可见），但不可以用来创建副标题。
 
     > The HTML Small Element (`<small>`) makes the text font size one size smaller (for example, from large to medium, or from small to x-small) down to the browser's minimum font size.  In HTML5, this element is repurposed to represent side-comments and small print, including copyright and legal text, independent of its styled presentation.
 
