--- a/前端试题/5.md
+++ b/前端试题/5.md
@@ -1,19 +1,119 @@
-####[[⬆]](#toc) <a name='html'>HTML相关问题：</a>
+## [前端工作面试HTML相关问题](https://github.com/darcyclarke/Front-end-Developer-Interview-Questions#html)
 
-* `doctype`（文档类型）的作用是什么？
+* Q: `doctype`（文档类型）的作用是什么？
 
-* 浏览器标准模式和怪异模式之间的区别是什么？
+  A: 在HTML中 `doctype` 有两个主要目的。
+   - 对文档进行有效性验证:
 
-* 使用 XHTML 的局限有哪些？
+    它告诉用户代理和校验器这个文档是按照什么DTD 写的。这个动作是被动的，每次页面加载时，浏览器并不会下载DTD 并检查合法性，只有当手动校验页面时才启用。
+
+  - 决定浏览器的呈现模式:
+
+    对于实际操作，通知浏览器读取文档时用哪种解析算法。如果没有写，则浏览器则根据自身的规则对代码进行解析，可能会严重影响html 排版布局。浏览器有三种方式解析HTML文档。
+     * 非怪异（标准）模式
+     * 怪异模式
+     * 部分怪异（近乎标准）模式
+  关于IE浏览器的文档模式，浏览器模式，严格模式，怪异模式，DOCTYPE标签，可详细阅读[模式？标准！](http://padding.me/blog/2014/07/04/mode-or-standard/)的内容。
+
+* Q: 浏览器标准模式和怪异模式之间的区别是什么？
+
+  A: 在“标准模式”(standards mode) 页面按照 HTML 与 CSS 的定义渲染，而在“怪异模式(quirks mode) 模式”中则尝试模拟更旧的浏览器的行为。
+  通常，浏览器基于页面中文件类型描述的存在以决定采用哪种渲染模式；如果存在一个完整的 DOCTYPE 则浏览器将会采用标准模式，而如果它缺失则浏览器将会采用怪异模式。
+
+  在 Quirks Mode 中具体的不同可以看这个页面：<https://www.cs.tut.fi/~jkorpela/quirks-mode.html>
+
+  这里简单挑两个来看一看：
+
+  盒子模型是错的（与 CSS 规范不同，虽然直观上讲或许会更自然一些），意思是说，width 和 height 属性指定的整个元素盒子的尺寸，包含了 padding 和 border，也就是说不只是元素的 content 而已（作者按：就像是 box-sizing: border-box;）。
+
+  > The box model is incorrect (different from CSS spec­i­fi­ca­tions, though perhaps intuitively more natural). This means that the width and height properties specify the dimen­sions of the entire element box, including padding and border, and not just the element’s content. (There is a demo later in this document.)
+
+  non-replaced inline 元素（比如默认是 span）的尺寸，会受到 width 和 height 的作用（虽然 CSS 规范中这两个属性应当被忽略）
+
+  > Dimensions of non-replaced inline elements (e.g., span elements by default) are affected by width and height properties (while by CSS specifications, they shall be ignored).
+
+
+
+* Q: 使用 XHTML 的局限有哪些？
     * 如果页面使用 'application/xhtml+xml' 会有什么问题吗？
 
-* 如果网页内容需要支持多语言，你会怎么做？
+    A: xhtml 语法要求严格，必须有`head`、`body` 每个dom 必须要闭合。
+    如果页面使用'application/xhtml+xml',一些老的浏览器并不兼容。
+
+* Q:如果网页内容需要支持多语言，你会怎么做？
     * 在设计和开发多语言网站时，有哪些问题你必须要考虑？
 
-* `data-`属性的作用是什么？
+    A: 编码UTF-8，空间域名需要支持多浏览地址,准备多套模板。
+     在设计和开发多语言网站时，需要考虑
+     - 应用字符集的选择
+     - 语言书写习惯&导航结构
+     - 数据库驱动型网站
+     - css 盒子过不过因为内容长度不一样出现不对齐偏移
 
-* 如果把 HTML5 看作做一个开放平台，那它的构建模块有哪些？
+* Q: `data-`属性的作用是什么？
 
-* 请描述一下 cookies，sessionStorage 和 localStorage 的区别？
+  A: `data-`为前端开发者提供自定义的属性，这些属性集可以通过对象的dataset属性获取，不支持该属性的浏览器可以通过 getAttribute方法获取:
+
+  `<div data-author="david" data-time="2011-06-20" data-comment-num="10">...</div>`
+
+  `div.dataset.commentNum; // 10`
+
+  需要注意的是，`data-`之后的以连字符分割的多个单词组成的属性，获取的时候使用驼峰风格。并不是所有的浏览器都支持.`dataset`属性，测试的浏览器中只有Chrome和Opera支持。
+
+  当没有合适的属性和元素时，自定义的 data 属性是能够存储页面或 App 的私有的自定义数据。
+
+  > Custom data attributes are intended to store custom data private to the page or application, for which there are no more appropriate attributes or elements.
+
+* Q:如果把 HTML5 看作做一个开放平台，那它的构建模块有哪些？
+
+   A: `<nav>`, `<header>`,`<section>`, `<footer>`
+    相关阅读：[必须知道的七个HTML5新特性](http://camnpr.com/archives/must-know-the-seven-html5-features.html)
+
+* Q: 请描述一下 cookies，sessionStorage 和 localStorage 的区别？
+
+  A: sessionStorage 和 localStorage 是HTML5 Web Storage API 提供的，可以方便的在web请求之间保存数据。有了本地数据，就可以避免数据在浏览器和服务器间不必要地来回传递。
+
+  sessionStorage、localStorage、cookie都是在浏览器端存储的数据，其中sessionStorage的概念很特别，引入了一个“浏览器窗口”的概念。sessionStorage是在同源的同窗口（或tab）中，始终存在的数据。也就是说只要这个浏览器窗口没有关闭，即使刷新页面或进入同源另一页面，数据仍然存在。关闭窗口后，sessionStorage即被销毁。同时“独立”打开的不同窗口，即使是同一页面，sessionStorage对象也是不同的
+
+  cookies会发送到服务器端。其余两个不会。
+
+  Microsoft指出InternetExplorer8增加cookie限制为每个域名50个，但IE7似乎也允许每个域名50个cookie。Firefox每个域名cookie限制为50个。Opera每个域名cookie限制为30个。Firefox和Safari允许cookie多达4097个字节，包括名（name）、值（value）和等号。Opera允许cookie多达4096个字节，包括：名（name）、值（value）和等号。InternetExplorer允许cookie多达4095个字节，包括：名（name）、值（value）和等号。
+
+  - Cookie
+    + 每个域名存储量比较小（各浏览器不同，大致4K）
+    + 所有域名的存储量有限制（各浏览器不同，大致4K）
+    + 有个数限制（各浏览器不同）
+    + 会随请求发送到服务器
+  - LocalStorage
+    + 永久存储
+    + 单个域名存储量比较大（推荐5MB，各浏览器不同）
+    + 总体数量无限制
+  - SessionStorage
+    + 只在 Session 内有效
+    + 存储量更大（推荐没有限制，但是实际上各浏览器也不同）
+
 
 * 请描述一下 `GET` 和 `POST` 的区别?
+
+  A: 区别如下：
+  * get向指定的资源请求数据,请求的数据会附在URL之后,就是把数据放置在请求行（request line）中），以?分割URL和传输数据，多个参数用&连接；
+  * post向指定的资源提交要被处理的数据。get方法，查询请求是在url中显示的，有长度限制，get方法是安全幂等的。而post方法请求是封装在http消息包体中
+
+   &|get|post
+  ---|---|----
+  后退/刷新|无害|请求重新提交
+  书签|可做书签|不可做
+  缓存|可被缓存|不能被缓存
+  历史|保留在浏览器记录里|不保留
+  对数据长度限制|限制（2048字符）|不限制
+  安全性|url中暴露数据|相对安全
+  可见性|url中可见|不可见
+
+  总结：
+    ①. 对于get来说，是向服务器端请求数据，其请求在url中可见，其长度有限制（2048字符）个体方法是安全幂等，这里的安全是指用于获取信息而非修改信息，幂等是指每次请求得到的结果都一样。
+    ②. 对于post来说，是向服务器端提交数据，每次刷新或者后退都会重新提交，post请求的数据封装在http请求的首部里。
+
+
+tips: 以上答案有的参考自：
+  - [Witcher42](http://witcher42.github.io/)
+  - [郑州网建](http://camnpr.com/)
