--- a/前端试题/5.md
+++ b/前端试题/5.md
@@ -29,10 +29,9 @@
 
   > The box model is incorrect (different from CSS spec­i­fi­ca­tions, though perhaps intuitively more natural). This means that the width and height properties specify the dimen­sions of the entire element box, including padding and border, and not just the element’s content. (There is a demo later in this document.)
 
-  <figure>
+
       <img src="http://upload.wikimedia.org/wikipedia/commons/6/64/W3C_and_Internet_Explorer_box_models.svg" alt="W3C和Internet Explorer的盒模型解释width属性的差异">
-      <figaption>W3C和Internet Explorer的盒模型解释width属性的差异,图片来自wikipedia</figaption>
-  </figure>
+
 
   non-replaced inline 元素（比如默认是 span）的尺寸，会受到 `width` 和 `height` 的作用（CSS 规范中这两个属性应当被忽略）
 
@@ -46,7 +45,7 @@
     A: xhtml 语法要求严格，必须有`head`、`body` 每个dom 必须要闭合。空标签也必须闭合。例如`<img />`, `<br/>`, `<input />`等。另外要在属性值上使用双引号。一旦遇到错误，立刻停止解析，并显示错误信息。
     如果页面使用'application/xhtml+xml',一些老的浏览器会不兼容。
 
-* Q:如果网页内容需要支持多语言，你会怎么做？
+* Q: 如果网页内容需要支持多语言，你会怎么做？
     * 在设计和开发多语言网站时，有哪些问题你必须要考虑？
 
     A: 编码使用`UTF-8`，空间域名需要支持多浏览地址,准备多套模板。
@@ -64,7 +63,7 @@
 
   `div.dataset.commentNum; // 10`
 
-  需要注意的是，`data-`之后的以连字符分割的多个单词组成的属性，获取的时候使用驼峰风格。并不是所有的浏览器都支持.`dataset`属性，测试的浏览器中只有Chrome和Opera支持。
+  需要注意的是，`data-`之后的以连字符分割的多个单词组成的属性，获取的时候使用驼峰风格。并不是所有的浏览器都支持.`dataset`属性，测试的浏览器中只有Chrome 和Opera 支持。
 
   即：当没有合适的属性和元素时，自定义的 data 属性是能够存储页面或 App 的私有的自定义数据。
 
@@ -88,18 +87,18 @@
 
   Microsoft 指出 Internet Explorer 8 增加cookie 限制为每个域名50个，但IE7 似乎也允许每个域名50个cookie。Firefox 每个域名cookie 限制为50个。Opera每个域名cookie 限制为30个。Firefox 和Safari 允许cookie 多达4097个字节，包括名（name）、值（value）和等号。Opera 许cookie 多达4096个字节，包括：名（name）、值（value）和等号。Internet Explorer 允许cookie 多达4095个字节，包括：名（name）、值（value）和等号。
 
-      - Cookie
-        + 每个域名存储量比较小（各浏览器不同，大致4K）
-        + 所有域名的存储量有限制（各浏览器不同，大致4K）
-        + 有个数限制（各浏览器不同）
-        + 会随请求发送到服务器
-      - LocalStorage
-        + 永久存储
-        + 单个域名存储量比较大（推荐5MB，各浏览器不同）
-        + 总体数量无限制
-      - SessionStorage
-        + 只在 Session 内有效
-        + 存储量更大（推荐没有限制，但是实际上各浏览器也不同）
+    - Cookie
+      + 每个域名存储量比较小（各浏览器不同，大致4K）
+      + 所有域名的存储量有限制（各浏览器不同，大致4K）
+      + 有个数限制（各浏览器不同）
+      + 会随请求发送到服务器
+    - LocalStorage
+      + 永久存储
+      + 单个域名存储量比较大（推荐5MB，各浏览器不同）
+      + 总体数量无限制
+    - SessionStorage
+      + 只在 Session 内有效
+      + 存储量更大（推荐没有限制，但是实际上各浏览器也不同）
 
 
 * 请描述一下 `GET` 和 `POST` 的区别?
@@ -119,8 +118,8 @@
   可见性|url中可见|不可见
 
   总结：
-    ①. 对于get 来说，是向服务器端请求数据，其请求在url 中可见，其长度有限制（2048字符）个体方法是安全幂等，这里的安全是指用于获取信息而非修改信息，幂等是指每次请求得到的结果都一样。
-    ②. 对于post 来说，是向服务器端提交数据，每次刷新或者后退都会重新提交，post 请求的数据封装在http 请求的首部里。
+    1 对于get 来说，是向服务器端请求数据，其请求在url 中可见，其长度有限制（2048字符）个体方法是安全幂等，这里的安全是指用于获取信息而非修改信息，幂等是指每次请求得到的结果都一样。
+    2 对于post 来说，是向服务器端提交数据，每次刷新或者后退都会重新提交，post 请求的数据封装在http 请求的首部里。
 
 
 tips: 以上部分答案参考自：
