--- a/前端试题/5.md
+++ b/前端试题/5.md
@@ -30,7 +30,7 @@
   > The box model is incorrect (different from CSS spec­i­fi­ca­tions, though perhaps intuitively more natural). This means that the width and height properties specify the dimen­sions of the entire element box, including padding and border, and not just the element’s content. (There is a demo later in this document.)
 
 
-      <img src="http://upload.wikimedia.org/wikipedia/commons/6/64/W3C_and_Internet_Explorer_box_models.svg" alt="W3C和Internet Explorer的盒模型解释width属性的差异">
+  <img src="http://upload.wikimedia.org/wikipedia/commons/6/64/W3C_and_Internet_Explorer_box_models.svg" alt="W3C和Internet Explorer的盒模型解释width属性的差异">
 
 
   non-replaced inline 元素（比如默认是 span）的尺寸，会受到 `width` 和 `height` 的作用（CSS 规范中这两个属性应当被忽略）
@@ -118,8 +118,8 @@
   可见性|url中可见|不可见
 
   总结：
-    1 对于get 来说，是向服务器端请求数据，其请求在url 中可见，其长度有限制（2048字符）个体方法是安全幂等，这里的安全是指用于获取信息而非修改信息，幂等是指每次请求得到的结果都一样。
-    2 对于post 来说，是向服务器端提交数据，每次刷新或者后退都会重新提交，post 请求的数据封装在http 请求的首部里。
+    - 对于get 来说，是向服务器端请求数据，其请求在url 中可见，其长度有限制（2048字符）个体方法是安全幂等，这里的安全是指用于获取信息而非修改信息，幂等是指每次请求得到的结果都一样。
+    - 对于post 来说，是向服务器端提交数据，每次刷新或者后退都会重新提交，post 请求的数据封装在http 请求的首部里。
 
 
 tips: 以上部分答案参考自：
