--- a/前端试题/5.md
+++ b/前端试题/5.md
@@ -18,24 +18,40 @@
 
 * Q: 浏览器标准模式和怪异模式之间的区别是什么？
 
-  A: 在“标准模式”(standards mode) 页面按照 HTML 与 CSS 的定义渲染，而在“怪异模式”(quirks mode)中则尝试模拟更旧的浏览器的行为。
-  通常，浏览器基于页面中文件类型描述的存在以决定采用哪种渲染模式；如果存在一个完整的`DOCTYPE`则浏览器将会采用标准模式，而如果它缺失则浏览器将会采用怪异模式。
+  A: 在“标准模式”(Standards Mode) 页面按照 HTML 与 CSS 的定义渲染，而在“怪异模式”(Quirks Mode)就是浏览器为了兼容很早之前针对旧版本浏览器设计、并未严格遵循 W3C 标准的网页而产生的一种页面渲染模式。浏览器基于页面中文件类型描述的存在以决定采用哪种渲染模式；如果存在一个完整的`DOCTYPE`则浏览器将会采用标准模式，而如果它缺失则浏览器将会采用怪异模式。
 
-  在“怪异模式”中具体的不同可以看这个页面：<https://www.cs.tut.fi/~jkorpela/quirks-mode.html>
+  强烈建议阅读加深理解：[怪异模式（Quirks Mode）对 HTML 页面的影响](http://www.ibm.com/developerworks/cn/web/1310_shatao_quirks/)，这里列下浏览器标准模式和怪异模式的区别：
 
-  这里简单挑两个来看一看：
+  1. 盒模型：
+  
+    在怪异模式下，盒模型为IE盒模型而非标准模式下的W3C 盒模型：在 IE 盒模型中，
+    box width = content width + padding left + padding right + border left + border right，
+    box height = content height + padding top + padding bottom + border top + border bottom。
+    而在 W3C 标准的盒模型中，box 的大小就是 content 的大小。
 
-  盒子模型为IE 盒模型，`width`=`border-left`+`padding-left`+`content-width`+`padding-right`+`border-right`,height=`border-top`+`padding-top`+`content-height`+`padding-bottom`+`border-bottom`。相当于CSS3 中的`box-sizing: border-box;`注意于W3C 盒模型注意区分。
+  2. 图片元素的垂直对齐方式:
 
-  > The box model is incorrect (different from CSS spec­i­fi­ca­tions, though perhaps intuitively more natural). This means that the width and height properties specify the dimen­sions of the entire element box, including padding and border, and not just the element’s content. (There is a demo later in this document.)
+    对于`inline`元素和`table-cell`元素，在 IE Standards Mode 下 vertical-align 属性默认取值为`baseline`。而当`inline`元素的内容只有图片时，如`table`的单元格`table-cell`。在 IE Quirks Mode 下，`table`单元格中的图片的 `vertical-align` 属性默认为`bottom`，因此，在图片底部会有几像素的空间。
 
+  3. `<table>`元素中的字体:
 
-  <img src="http://upload.wikimedia.org/wikipedia/commons/6/64/W3C_and_Internet_Explorer_box_models.svg" alt="W3C和Internet Explorer的盒模型解释width属性的差异">
+    CSS 中，描述`font`的属性有`font-family`，`font-size`，`font-style`，`font-weigh`,上述属性都是可以继承的。而在 IE Quirks Mode 下，对于`table` 元素，字体的某些属性将不会从`body`或其他封闭元素继承到`table`中，特别是 `font-size`属性。
 
+  4. 内联元素的尺寸:
 
-  non-replaced inline 元素（比如默认是 span）的尺寸，会受到 `width` 和 `height` 的作用（CSS 规范中这两个属性应当被忽略）
+    在 IE Standards Mode 下，non-replaced inline 元素无法自定义大小，而在 IE Quirks Mode 下，定义这些元素的`width`和`height` 属性，能够影响该元素显示的大小尺寸。
 
-  > Dimensions of non-replaced inline elements (e.g., span elements by default) are affected by width and height properties (while by CSS specifications, they shall be ignored).
+  5. 元素的百分比高度:
+
+    CSS 中对于元素的百分比高度规定如下，百分比为元素包含块的高度，不可为负值。如果包含块的高度没有显式给出，该值等同于“auto”（即取决于内容的高度）。所以百分比的高度必须在父元素有声明高度时使用。
+
+    当一个元素使用百分比高度时，在 IE Standards Mode 下，高度取决于内容的变化，而在 Quirks Mode 下，百分比高度则被正确应用。
+
+  6. 元素溢出的处理：
+
+    在 IE Standard Mode 下，`overflow`取默认值 `visible`，即溢出可见，这种情况下，溢出内容不会被裁剪，呈现在元素框外。而在 Quirks Mode 下，该溢出被当做扩展`box`来对待，即元素的大小由其内容决定，溢出不会被裁剪，元素框自动调整，包含溢出内容。
+
+  另可参考阅读：<https://www.cs.tut.fi/~jkorpela/quirks-mode.html>
 
 
 
@@ -53,7 +69,7 @@
      - 应用字符集的选择
      - 语言书写习惯&导航结构
      - 数据库驱动型网站
-     - css 盒子过不过因为内容长度不一样出现不对齐偏移
+     - css 盒子会因为内容尺寸不一样出现不对齐偏移
 
 * Q: `data-`属性的作用是什么？
 
@@ -71,7 +87,9 @@
 
 * Q:如果把 HTML5 看作做一个开放平台，那它的构建模块有哪些？
 
-  A: `<nav>`, `<header>`,`<section>`, `<footer>`
+  A: <img src="http://camnpr.com/upload/2013/7/201307241445585271.png" alt="HTML5基本布局（语义化的标签）">
+
+  其中的`<section>`和`<article>`标签值得注意，`<section>`标签用来分组相类似的信息，而`<article>`标签则应该是用来放置诸如一篇文章或是博客一类的信息，你可以在`<artile>`中嵌入`<header>`，`<section>`，`<footer>`等内容。`<article>`标签，正如它的名称所暗示的那样，提供了一个完整的信息包。相比之下，`<section>`标签包含的是有关联的信息，但这些信息自身不能被放置到不同的上下文中，因为这样的话其所代表的含义就会丢失。
 
   相关阅读：
     - [必须知道的七个HTML5新特性](http://camnpr.com/archives/must-know-the-seven-html5-features.html)
@@ -104,7 +122,7 @@
 * 请描述一下 `GET` 和 `POST` 的区别?
 
   A: 区别如下：
-  * get 向指定的资源请求数据,请求的数据会附在URL之后,就是把数据放置在请求行（request line）中），以?分割URL和传输数据，多个参数用&连接；
+  * get 向指定的资源请求数据,请求的数据会附在URL 之后,就是把数据放置在请求行（request line）中），以?分割URL和传输数据，多个参数用&连接；
   * post 向指定的资源提交要被处理的数据。get 方法，查询请求是在url中显示的，有长度限制，get 方法是安全幂等的。而post 方法请求是封装在http 消息包体中
 
    &|get|post
