--- a/前端试题/5.md
+++ b/前端试题/5.md
@@ -87,13 +87,46 @@
 
 * Q:如果把 HTML5 看作做一个开放平台，那它的构建模块有哪些？
 
-  A: <img src="http://camnpr.com/upload/2013/7/201307241445585271.png" alt="HTML5基本布局（语义化的标签）">
+  A: 开放网络平台:
 
-  其中的`<section>`和`<article>`标签值得注意，`<section>`标签用来分组相类似的信息，而`<article>`标签则应该是用来放置诸如一篇文章或是博客一类的信息，你可以在`<artile>`中嵌入`<header>`，`<section>`，`<footer>`等内容。`<article>`标签，正如它的名称所暗示的那样，提供了一个完整的信息包。相比之下，`<section>`标签包含的是有关联的信息，但这些信息自身不能被放置到不同的上下文中，因为这样的话其所代表的含义就会丢失。
+  > The Open Web Platform is the collection of open (royalty-free) technologies which enables the Web. Using the Open Web Platform, everyone has the right to implement a software component of the Web without requiring any approvals or waiving license fees.
 
-  相关阅读：
-    - [必须知道的七个HTML5新特性](http://camnpr.com/archives/must-know-the-seven-html5-features.html)
-    - [你需要知道的五个HTML5新功能](http://www.html5cn.org/article-6180-1.html)
+  开放网络平台（Open Web Platform）是一些开放的（免版权）技术的集合，这些技术激活了互联网。使用开放网络平台时，每个人都有权实现 Web 上的一个组件，而不用向任何人索取许可和证书。
+
+
+  将 HTML5 看做开放网络平台，那它的构建模块有哪些？我想，所谓构建模块，指的应该是开放网络平台这个技术集合中的技术。
+
+  - HTML
+  - DOM
+  - CSS
+  - SVG
+  - MathML
+  - Web APIs
+      + Canvas WebGL
+      + Audio
+      + Web Storage
+      + File, File System
+      + History, contentEditable, Drag & Drop, HTML Editing Commands
+      + Web Sockets
+      + Web Workers
+      + Server-Send Events
+      + XMLHttpRequest
+      + Geolocation, Device Orientation
+      + DOM Events, Touch Events, Progress Events
+      + Custom application development
+      + Clipboard and events
+      + Web Notifications, Web Messaging
+      + Offine Web Applications
+      + Media Capture API
+      + Timing control for script-based animations, Page Visibility, Navigation + Timing, Resource Timing
+      + Selectors
+      + DOM Traversal, DOM XPath, Element Traversal
+      + EcmaScript / JavaScript
+      + HTTP
+      + URI
+      + Media Accessibility Checklist
+
+  该答案引自: <http://witcher42.github.io/2014/06/03/open-web-platform/>
 
 * Q: 请描述一下 cookies，sessionStorage 和 localStorage 的区别？
 
